--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Miltonian+Tattoo">
-    
+
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -22,14 +22,16 @@
 
                 <li><a>INICIO</a></li>
                 <li>
-                    <button onclick="showProductsList()" class="displayButtonsProds">PRODUCTOS <img src="arrowMenu.png" style="
+                    <button onclick="showProductsList()" class="displayButtonsProds">PRODUCTOS <img src="arrowMenu.png"
+                            style="
                         width: 15px;
                         margin-left: 5px;
                     "></button>
                     <ul class="ulProducts">
                         <li><a>Todos los productos</a></li>
                         <li>
-                            <button onclick="showFruitsList()" class="displayButtonsProds">Frutas<img src="arrowMenu.png" style="
+                            <button onclick="showFruitsList()" class="displayButtonsProds">Frutas<img
+                                    src="arrowMenu.png" style="
                                 width: 15px;
                                 margin-left: 5px;
                             "></button>
@@ -40,7 +42,6 @@
                                 <li><a>Peras</a></li>
                                 <li><a>Naranjas</a></li>
                                 <li><a>Melones y sandias</a></li>
-                                <li><a>Peras</a></li>
                                 <li><a>Melocotones y ciruelas</a></li>
                                 <li><a>Manzanas</a></li>
                                 <li><a>Limas y limones</a></li>
