icons img corregidos

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                             <ul class="ulFruits">
                                 <li><a><img src="cereza.png"> Cerezas y picotas</a></li>
                                 <li><a><img src="platano.png"> Platanos</a></li>
-                                <li><a><img src="piña.png"> Piñas</a></li>
+                                <li><a><img src="pina.png"> Piñas</a></li>
                                 <li><a><img src="pera.png"> Peras</a></li>
                                 <li><a><img src="naranja.png"> Naranjas</a></li>
                                 <li><a><img src="sandia.png"> Melones y sandias</a></li>
-                                <li><a><img src="melocotón.png"> Melocotones y ciruelas</a></li>
+                                <li><a><img src="melocoton.png"> Melocotones y ciruelas</a></li>
                                 <li><a><img src="manzana.png"> Manzanas</a></li>
                                 <li><a><img src="limon.png"> Limas y limones</a></li>
                                 <li><a><img src="kiwi.png"> Kiwis</a></li>
