--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-
-    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
+    
+    <meta 
+     name='viewport' 
+     content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' 
+/>
     <title>Document</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Miltonian+Tattoo">
 
@@ -52,7 +55,21 @@
                                 <li><a>Otras frutas</a></li>
                             </ul>
                         </li>
-                        <li><a>Verduras y hortalizas</a></li>
+                        <li><button onclick="showVerduras()" class="displayButtonsProds">Verduras y hortalizas<img
+                            src="arrowMenu.png" style="
+                        width: 15px;
+                        margin-left: 5px;
+                    "></button>
+                    <ul class="ulVerduras">
+                        <li><a><img src="tomate.png"> Tomates</a></li>
+                        <li><a><img src="cebolla.png"> Cebollas y ajos</a></li>
+                        <li><a><img src="lechuga.png"> Lechugas</a></li>
+                        <li><a><img src="patata.png"> Patatas</a></li>
+                        <li><a><img src="pimiento.png"> Pimientos</a></li>
+                        <li><a><img src="seta.png"> Setas y champiñones</a></li>
+                        <li><a><img src="tierra.png"> De tierra</a></li>
+                        <li><a><img src="germinado.png"> Germinados</a></li>
+                    </ul></li>
                         <li><a>Legumbres</a></li>
                         <li><a>Frutos secos</a></li>
                         <li><a>Encurtidos</a></li>
