--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 <head>
     <meta charset="UTF-8">
     
-    <meta 
-     name='viewport' 
-     content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' 
-/>
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Document</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Miltonian+Tattoo">
 
