solucionar contador carro

--- a/index.html
+++ b/index.html
@@ -80,9 +80,7 @@
             </ul>
         </div>
         <div>
-            <button onclick="showList()" class="buttonCart"><img src="carritoIcons.png">
-                ( 0 )
-            </button>
+            <button onclick="showList()" class="buttonCart"><img src="carritoIcons.png">(0)</button>
         </div>
     </nav>
     <script src="nav.js"></script>
