terminado en mobile small

--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
                         <li><a>Legumbres</a></li>
                         <li><a>Frutos secos</a></li>
                         <li><a>Encurtidos</a></li>
+                        <li><a>Especias</a></li>
                         <li><a>Miel</a></li>
+                        <li><a>Dulces</a></li>
+                        <li><a>Aperitivos Snack</a></li>
                     </ul>
                 </li>
                 <li><a>FRUTA PARA OFICINA</a></li>
