menú terminado mobile carrito con estilos

--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Document</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Miltonian+Tattoo">
-
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -53,20 +51,21 @@
                             </ul>
                         </li>
                         <li><button onclick="showVerduras()" class="displayButtonsProds">Verduras y hortalizas<img
-                            src="arrowMenu.png" style="
+                                    src="arrowMenu.png" style="
                         width: 15px;
                         margin-left: 5px;
                     "></button>
-                    <ul class="ulVerduras">
-                        <li><a><img src="tomate.png"> Tomates</a></li>
-                        <li><a><img src="cebolla.png"> Cebollas y ajos</a></li>
-                        <li><a><img src="lechuga.png"> Lechugas</a></li>
-                        <li><a><img src="patata.png"> Patatas</a></li>
-                        <li><a><img src="pimiento.png"> Pimientos</a></li>
-                        <li><a><img src="seta.png"> Setas y champiñones</a></li>
-                        <li><a><img src="tierra.png"> De tierra</a></li>
-                        <li><a><img src="germinado.png"> Germinados</a></li>
-                    </ul></li>
+                            <ul class="ulVerduras">
+                                <li><a><img src="tomate.png"> Tomates</a></li>
+                                <li><a><img src="cebolla.png"> Cebollas y ajos</a></li>
+                                <li><a><img src="lechuga.png"> Lechugas</a></li>
+                                <li><a><img src="patata.png"> Patatas</a></li>
+                                <li><a><img src="pimiento.png"> Pimientos</a></li>
+                                <li><a><img src="seta.png"> Setas y champiñones</a></li>
+                                <li><a><img src="tierra.png"> De tierra</a></li>
+                                <li><a><img src="germinado.png"> Germinados</a></li>
+                            </ul>
+                        </li>
                         <li><a>Legumbres</a></li>
                         <li><a>Frutos secos</a></li>
                         <li><a>Encurtidos</a></li>
@@ -77,9 +76,9 @@
                     </ul>
                 </li>
                 <li><a>FRUTA PARA OFICINA</a></li>
+                <li><a>SOBRE NOSOTROS</a></li>
                 <li><a>CONTACTO</a></li>
-
-                <li><a>CARRITO</a></li>
+                <li class="cartStyleLI"><a><img src="carritomenu.png">CARRITO ( 0 )</a></li>
             </ul>
         </div>
         <div>
