--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta name="viewport" content= "width=device-width, user-scalable=no">
     <title>Document</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Miltonian+Tattoo">
     <link rel="stylesheet" href="style.css">
