reponsive terminado para tablets , falta refactorizar

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
                         margin-left: 5px;
                     "></button>
                     <ul class="ulProducts">
-                        <li><a>Todos los productos</a></li>
+                        
+                        <li><a><img src="catalog.png">Catálogo completo</a></li>
                         <li>
-                            <button onclick="showFruitsList()" class="displayButtonsProds disableZoombutton">Frutas<img
+                            <button onclick="showFruitsList()" class="displayButtonsProds disableZoombutton"><img src="cereza.png">Frutas<img
                                     src="arrowMenu.png" style="
                                 width: 15px;
                                 margin-left: 5px;
@@ -51,7 +52,7 @@
                                 <li><a>Otras frutas</a></li>
                             </ul>
                         </li>
-                        <li><button onclick="showVerduras()" class="displayButtonsProds disableZoombutton">Verduras y hortalizas<img
+                        <li><button onclick="showVerduras()" class="displayButtonsProds disableZoombutton"><img src="cebolla.png">Verduras y hortalizas<img
                                     src="arrowMenu.png" style="
                         width: 15px;
                         margin-left: 5px;
@@ -67,17 +68,18 @@
                                 <li><a><img src="germinado.png"> Germinados</a></li>
                             </ul>
                         </li>
-                        <li><a>Legumbres</a></li>
-                        <li><a>Frutos secos</a></li>
-                        <li><a>Encurtidos</a></li>
-                        <li><a>Especias</a></li>
-                        <li><a>Miel</a></li>
-                        <li><a>Dulces</a></li>
-                        <li><a>Aperitivos Snack</a></li>
+                        <li><a><img src="garbanzo.jpg"> Legumbres</a></li>
+                        <li><a><img src="cacahuete.png"> Frutos secos</a></li>
+                        <li><a><img src="tapa.png"> Encurtidos</a></li>
+                        <li><a><img src="especias.png"> Especias</a></li>
+                        <li><a><img src="miel.png"> Miel</a></li>
+                        <li><a><img src="pastel.png"> Dulces</a></li>
+                        <li><a><img src="galleta.png"> Galletas y cereales</a></li>
+                        <li><a><img src="aperitivos snack.png"> Aperitivos Snack</a></li>
                     </ul>
                 </li>
-                <li><a>FRUTA PARA OFICINA</a></li>
-                <li><a>SOBRE NOSOTROS</a></li>
+                <li><a>PARA OFICINAS</a></li>
+                <li><a>NOSOTROS</a></li>
                 <li><a>CONTACTO</a></li>
                 <li class="cartStyleLI"><a><img src="carritomenu.png">CARRITO ( 0 )</a></li>
             </ul>
@@ -86,6 +88,21 @@
             <button onclick="showList()" class="buttonCart disableZoombutton"><img src="carritoIcons.png">(0)</button>
         </div>
     </nav>
+<div style="padding-top: 64px;background: blue;"><h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+    <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+    <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+    <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+    <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+    <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+    <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+    <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+    <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+    <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+    <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+    <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+    <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+    <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1></div>
+    
     <script src="nav.js"></script>
 </body>
 
