responsive terminado , falta pequeños retoques

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <button onclick="showList()" class="buttonCart disableZoombutton"><img src="carritoIcons.png">(0)</button>
         </div>
     </nav>
-<div style="padding-top: 64px;background: blue;"><h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+<div style="padding-top: 64px;background: yellow"><h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
     <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
     <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
     <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
