--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     
     <title>Document</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Miltonian+Tattoo">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -88,7 +90,7 @@
             <button onclick="showList()" class="buttonCart disableZoombutton"><img src="carritoIcons.png">(0)</button>
         </div>
     </nav>
-<div style="padding-top: 64px;background: yellow"><h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+<div style="padding-top: 64px;"><h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
     <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
     <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
     <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
