--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </ul>
         </div>
         <div>
-            <button onclick="showList()" class="buttonCart disableZoombutton"><span>Carrito: </span><img src="carritoIcons.png">(0)</button>
+            <button class="buttonCart disableZoombutton"><span>Carrito: </span><img src="carritoIcons.png">(0)</button>
         </div>
     </nav>
     <div style="padding-top: 64px;">
