--- a/index.html
+++ b/index.html
@@ -94,8 +94,23 @@
             <button class="buttonCart disableZoombutton"><span>Carrito: </span><img src="carritoIcons.png">(0)</button>
         </div>
     </nav>
-   
-    
+    <div style="padding-top: 64px;">
+        <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+        <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+        <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+        <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+        <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+        <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+        <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+        <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+        <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+        <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+        <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+        <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+        <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+        <h1>sfdsfsfdsafasfasdfadsfsdafdfsafffff</h1>
+    </div>
+
     <script src="nav.js"></script>
 </body>
 
