optimizacion safari prueba

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button onclick="showList()" class="disableZoombutton"><img src="menu.svg"></button>
             <ul class="listProducts">
 
-                <li><a href="/">INICIO</a></li>
+                <li><a>INICIO</a></li>
                 <li>
                     <button onclick="showProductsList()" class="displayButtonsProds disableZoombutton">PRODUCTOS <img
                             src="arrowMenu.png" style="
