--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav>
         <div>
-            <h1>HORTICURITA</h1>
+            <a>HORTICURITA</a>
         </div>
         <div>
             <button onclick="showList()" class="disableZoombutton"><img src="menu.svg"></button>
