prueba definitiva safari

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </li>
 
                         <li>
-                            <button onclick="showFruitsList()" class="displayButtonsProds disableZoombutton"><img
+                            <button onclick="showFruitsList()" class="displayButtonsProds disableZoombutton frutasListButton"><img
                                     src="cereza.png">Frutas<img src="arrowMenu.png" style="
                                 width: 15px;
                                 margin-left: 5px;
@@ -58,7 +58,7 @@
                                 <li><a>+ Otras frutas</a></li>
                             </ul>
                         </li>
-                        <li><button onclick="showVerduras()" class="displayButtonsProds disableZoombutton"><img
+                        <li><button onclick="showVerduras()" class="displayButtonsProds disableZoombutton verdurasListButton"><img
                                     src="cebolla.png">Verduras y hortalizas<img src="arrowMenu.png" style="
                         width: 15px;
                         margin-left: 5px;
