--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </ul>
         </div>
         <div>
-            <button class="buttonCart disableZoombutton"><span>Carrito: </span><img src="carritoIcons.png">(0)</button>
+            <a class="buttonCart disableZoombutton"><span>Carrito: </span><img src="carritoIcons.png">(0)</a>
         </div>
     </nav>
    
